--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
 	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+
 }
 
 tasks.named('test') {
